imports/ui/stylesheets/common.scss
@import "../../../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
@import '../../../../node_modules/react-activity/dist/react-activity.css';
@import "./colors.scss";
@import "./fonts.scss";

body {
  background-color: $bg-grey !important;
  color: black;
  margin: 0;
  padding: 0;
  -moz-osx-font-smoothing: grayscale; /* Firefox font render fix on OSX*/
  -webkit-font-smoothing: antialiased;
  font-family: 'Roboto', Helvetica, Arial, sans-serif !important;
  font-size: 16px;
  font-weight: 300;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

h2 {
  font-weight: 300 !important;
}

a {
  text-decoration: none !important;
}

.app-root {
  width: 100%;
  height: 100%;
  display: flex;
  position: absolute;
  overflow: hidden;
}

.loading-box {
  position: relative;
  width: 100%;
  height: 100%;
  align-items: center;
  display: flex;
  justify-content: center;
  background-color: rgba(50, 50, 50, 0.5);
}

.user-icon {
  border-radius: 12px;
}

.fill-header-bar {
  position: relative;
  border-bottom: 1px solid $shadow-grey;
}

.fill-header-bar:before {
  content: "";
  position: absolute;
  left: -100%;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: white;
  border-bottom: 1px solid $shadow-grey;
  box-sizing: content-box;
}

.fill-header-bar:after {
  content: "";
  position: absolute;
  left: 100%;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: white;
  border-bottom: 1px solid $shadow-grey;
  box-sizing: content-box;
}

svg path.event-bounds-polygon {
  stroke: forestgreen;
  stroke-opacity: 0.3;
  fill: forestgreen;
  fill-opacity: 0.1;
  stroke-width: 1px;
}

